--- a/jelastic/file_manager.conf
+++ b/jelastic/file_manager.conf
@@ -1,5 +1,9 @@
 [conf]
-        versions/1.9/neo4j-1.9/conf
+        versions/2.1/neo4j-2.1/conf
+[plugins]
+        versions/2.1/neo4j-2.1/plugins
+[data]
+        versions/2.1/neo4j-2.1/data
 [cron]
         cron
 [keys]
