--- a/jelastic/jelastic.conf
+++ b/jelastic/jelastic.conf
@@ -3,5 +3,5 @@ Engine_Type=java
 Native_Requirements=
 App_User=jelastic
 Admin_App_User=admin
-Node_Type=neo4j2_1
+Node_Type=neo4j2-1
 Web_Access=1
